publish: styling fixing before deployment
generated from commit 23ba5df722e5ab0d7d07431682bed26f869e9221

--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+import undefined from 'undefined';
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,7 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- <script src="https://kit.fontawesome.com/fa558b3648.js" crossorigin="anonymous"></script> -->
-  <script src="script.js" defer></script>
   <title>Zombie Time</title>
 <script defer src="index.js"></script></head>
 
@@ -17,8 +17,8 @@
       <label for="check" class="menu-btn">
         <i class="fas fa-bars"></i>
       </label>
-      <a href="/" class="logo"><img class="logo-image" src="assets/images/landing/logo.png"
-          alt="Zombie Time logo"> Zombie Time</a>
+      <a href="/" class="logo"><img class="logo-image" src="assets/images/landing/logo.png" alt="Zombie Time logo">
+        Zombie Time</a>
       <ul class="navlinks">
         <li><a href="#how-to-play">How to Play</a></li>
         <li><a href="#about">About Us</a></li>
@@ -36,22 +36,17 @@
       <img class="hero-image" src="assets/images/landing/Cartoon-Zombie.svg" alt="Zombie image">
     </div>
   </section>
+
   <section class="how-to-play" id="how-to-play">
 
     <div class="screenshot-container">
       <img class="screenshot" src="assets/images/landing/screenshot.png" alt="Zombie Time screenshot">
     </div>
     <div class="how-to">
-      <h2>How to Play</h2>
-      <p>Move position with the arrow keys.</p>
-      <div class="arrow-keys">
-        <i class="fas fa-arrow-alt-circle-up"></i>
-        <i class="fas fa-arrow-alt-circle-down"></i>
-        <i class="fas fa-arrow-alt-circle-left"></i>
-        <i class="fas fa-arrow-alt-circle-right"></i>
-      </div>
-      <p>Click in the direction you want to shoot. Make sure to avoid the zombies! Too many encounters will lower your
-        health and eventually lose the game. You win by surviving 5 waves of zombies!</p>
+    <h3>How to Play</h3>
+
+      <img src="./assets/images/game-instrucions/game-instrucions.svg" draggable="false" alt="">
+
     </div>
 
   </section>
@@ -86,7 +81,7 @@
         </div>
         <h5>Bohdan Kornatskyi</h5>
         <div class="title-text">
-          <h6>Software Developer</h6>
+          <h6>Fullstack Developer</h6>
         </div>
         <div class="socials">
           <div><a href="https://www.linkedin.com/in/bohdan-kornatskyi/" class="social"><svg
@@ -137,7 +132,6 @@
       </div>
     </div>
   </footer>
-  <script src="index.bundle.js"></script>
 </body>
 
 </html>
