--- a/game.html
+++ b/game.html
@@ -6,10 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zombie Time</title>
-
-
-
-
 <script defer src="game.js"></script></head>
 
 <body>
@@ -82,11 +78,7 @@
     </div>
 
 
-    <!-- Controls and game instructions -->
 
-    <div class="gameInstructions">
-        <img src="./assets/images/game-instrucions/game-instrucions.svg" draggable="false" alt="">
-    </div>
 
     <script>
         // 1260 880 560
@@ -105,6 +97,10 @@
                 document.querySelector('.gameDashboard').style.width = "480px";
                 document.querySelector('.gameDashboard').style.height = "310px";
                 document.getElementById('canvas-container').innerHTML = '<canvas id="viewport" width="480px" height="310px"></canvas>' + document.getElementById('canvas-container').innerHTML;
+                break;
+            case window.innerWidth < 560:
+
+                document.getElementById('canvas-container').innerHTML = `<h3 class="screenSizeMessage">Game available only for window sizes >560 and only for desktop browsers</h3>`;
                 break;
             default:
                 break;
