publish: styling fixing before deployment
generated from commit 23ba5df722e5ab0d7d07431682bed26f869e9221

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@ import undefined from 'undefined';
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta property="og:title" content="Zombie Time" />
+  <meta property="og:image" content="assets/images/landing/screenshot.png" />
+  <meta property="og:description" content="2D shooter" />
+
+  <link rel="icon" href="assets/images/player/front-right.png">
+
   <!-- <script src="https://kit.fontawesome.com/fa558b3648.js" crossorigin="anonymous"></script> -->
   <title>Zombie Time</title>
 <script defer src="index.js"></script></head>
@@ -43,7 +49,7 @@ import undefined from 'undefined';
       <img class="screenshot" src="assets/images/landing/screenshot.png" alt="Zombie Time screenshot">
     </div>
     <div class="how-to">
-    <h3>How to Play</h3>
+      <h3>How to Play</h3>
 
       <img src="./assets/images/game-instrucions/game-instrucions.svg" draggable="false" alt="">
 
